--- a/calc/teploizoliacia_form.html
+++ b/calc/teploizoliacia_form.html
@@ -4,15 +4,15 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Расчет</title>
-      <link rel="stylesheet" href="../css/calc/fasad.css" />
-      <script defer src="../js/calc/fasad.js"></script>
+      <link rel="stylesheet" href="../css/calc/teploizoliacia.css" />
+      <script defer src="../js/calc/teploizoliacia.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
    </head>
    <body>
-      <div class="fasad_form_main">
-         <section class="wall" aria-label="Форма расчета панелей и комплектующих для cтен">
+      <div class="teploizol_form_main">
+         <section class="wall" aria-label="Форма расчёта теплоизоляционных материалов для cтен">
             <div class="allwalls-wrp">
-               <h2 class="wall-title-h2" aria-label="Название раздела">Расчет панелей и комплектующих для cтен</h2>
+               <h2 class="wall-title-h2" aria-label="Название раздела">Расчёт теплоизоляционных материалов для кровли</h2>
                <!-- Начало формы для стен-->
                <div class="walls" id="walls-id">
                   <form action="#" class="walls-form" id="walls-form-id"
