--- a/calc/teploizoliacia_form.html
+++ b/calc/teploizoliacia_form.html
@@ -95,17 +95,17 @@
                         </div>
                         <!-- Вывод общих значений ломаных фронтонов -->
                         <div class="all-results-wrp hidden">
-                           <label class="notfront-karnizsves-sum-square-all-title" aria-label="Название поля вывода">
+                           <label class="dvuskat_roof__sum_square-all-title" aria-label="Название поля вывода">
                            Общая площадь крыши, м&sup2; </label>
-                           <input class="filter_data notfront-karnizsves-sum-square-all input-style" disabled
-                              id="notfront-karnizsves-sum-square-all-id"
+                           <input class="filter_data dvuskat_roof__sum_square-all input-style" disabled
+                              id="dvuskat_roof__sum_square-all-id"
                               type="number"
                               name="data[Без фронтона][Площадь свесов]"
                               step="0.0001" min="0"
-                              aria-labelledby="notfront-karnizsves-form-id notfront-karnizsves-sum-square-all-id">
-                           <label class="notfront-karnizsves-sum-height-title">Сумарн. длина карнизных свесов когда нет
+                              aria-labelledby="dvuskat_roof__form-id dvuskat_roof__sum_square-all-id">
+                           <label class="dvuskat_roof__sum_height-title">Сумарн. длина карнизных свесов когда нет
                            фронтонов, м</label>
-                           <input class="filter_data notfront-karnizsves-sum-height input-style" id="notfront-karnizsves-sum-height-id"
+                           <input class="filter_data dvuskat_roof__sum_height input-style" id="dvuskat_roof__sum_height-id"
                               disabled
                               type="number"
                               name="data[Без фронтона][Длина карнизных свесов]"
