--- a/calc/teploizoliacia_form.html
+++ b/calc/teploizoliacia_form.html
@@ -224,7 +224,7 @@
                      <form action="#" class="mansard_roof__form" id="mansard_roof__form-id"
                         name="mansard_roof__form-id"
                         aria-labelledby="mansard_roof__form-id mansard_roof__form-id">
-                        <div class="mansard_roof__groups_item-wrp">
+                        <div class="input_label__groups_item-wrp">
                            <div class="input_label-wrp">
                               <label class="input_label"
                                  aria-label="Название поля ввода">Длина по карнизному свесу(L), м</label>
@@ -262,7 +262,7 @@
 			   
             </div>
             <!-- Вывод площади крыши-->
-            <div class="all-results-wrp hidden1">
+            <div class="all-results-wrp hidden">
                <label class="input_label" aria-label="Название поля вывода">
                Общая площадь односкат.крыши, м&sup2; </label>
                <input class="filter_data odnoskat_roof__sum_square-all input-style" disabled
@@ -304,6 +304,171 @@
                      step="0.0001" min="0"
                      aria-labelledby="mansard_roof__form-id mansard_roof__sum_square-all-id">         
             </div>
+         </section>
+         <section class="wall" aria-label="Форма расчёта теплоизоляционных материалов для стен">
+            <h2 class="wall_title__h2" aria-label="Название раздела">Расчёт теплоизоляционных материалов для стен</h2>
+            <!-- Начало формы для стен-->
+            <h3 class="wall__h2" aria-label="Название раздела">Выберите тип стены:</h3>
+            <div class="wall__type">
+               <div class="karkas_wall">
+                  <div class="karkas_wall__checkbox bg_fon_roof">
+                     <div class="karkas_wall__wrp">
+                        <img class="img__karkas_wall" src="../img/calc/teploizoliacia/karkas_stena.svg" alt="каркасная стена" height="150" id="img_karkas_wall-id">
+                     </div>
+                     <div class="checkbox__wrp">
+                        <label class="custom-lable" for="check-karkas_wall">
+                        <input type="checkbox" id="check-karkas_wall" value="interest_karkas_wall" name="karkas_wall" onchange='showKarkasWallItems(this)'>
+                        <i></i>
+                        <span class="karkas_wall__span">Каркасная стена</span>
+                        </label>
+                     </div>
+                  </div>
+                  <!-- Начало полей для каркассной стены -->
+<div class="karkas_wall__all_wrp hidden" id="karkas_wall__all_wrp-id">
+   <div class="karkas_material">
+      <span class="karkas_material__span">Материал каркаса:</span>
+   <div class="checkbox2_items">
+      <input class="inp-cbx" id="cbx" type="checkbox" style="display: none" />
+      <label class="cbx" for="cbx">
+         <span>
+            <svg width="12px" height="10px" viewbox="0 0 12 10">
+            <polyline points="1.5 6 4.5 9 10.5 1"></polyline></svg>
+         </span>
+            <span>деревянный</span>
+      </label>
+   </div>
+<div class="checkbox2_items">
+         <input class="inp-cbx" id="cbx2" type="checkbox" style="display: none" />
+         <label class="cbx" for="cbx2">
+            <span>
+               <svg width="12px" height="10px" viewbox="0 0 12 10">
+               <polyline points="1.5 6 4.5 9 10.5 1"></polyline></svg>
+            </span>
+               <span>металлический</span>
+         </label>
+</div>  
+   </div>
+                     <div class="karkas_wall" id="karkas_wall_wrp">
+                        <form action="#" class="karkas_wall__form" id="karkas_wall__form-id"
+                           aria-labelledby="karkas_wall_wrp karkas_wall__form-id">
+                           <span class="karkas_wall__label"
+                              aria-label="Название формы">Стена </span>
+                           <svg class="remove-form-btn remove-form" id="close-formKarkasWall" onclick="deleteFormKarkasWall(this)"
+                              aria-label="Кнопка удаления формы подсчета стен" 
+                              aria-hidden="true" focusable="false" width="20" height="20" viewBox="0 0 20 20">
+                              <path class="st0"
+                                 d="M12.7,7.2c-0.3,0-0.5,0.2-0.5,0.5v8.9c0,0.3,0.2,0.5,0.5,0.5s0.5-0.2,0.5-0.5V7.7C13.2,7.5,13,7.2,12.7,7.2z"/>
+                              <path class="st0"
+                                 d="M7.3,7.2C7,7.2,6.8,7.5,6.8,7.7v8.9C6.8,16.8,7,17,7.3,17c0.3,0,0.5-0.2,0.5-0.5V7.7C7.7,7.5,7.5,7.2,7.3,7.2z"/>
+                              <path class="st0" d="M3.3,6v11.5c0,0.7,0.2,1.3,0.7,1.8C4.4,19.7,5,20,5.6,20h8.7c0.6,0,1.2-0.3,1.7-0.7c0.4-0.5,0.7-1.1,0.7-1.8V6
+                                 c0.9-0.2,1.4-1.1,1.3-2c-0.1-0.9-0.9-1.6-1.7-1.6h-2.4V1.9c0-0.5-0.2-1-0.5-1.3C13,0.2,12.5,0,12,0H7.9C7.5,0,7,0.2,6.6,0.5
+                                 C6.3,0.9,6.1,1.4,6.1,1.9v0.6H3.7C2.9,2.4,2.1,3.1,2,4C1.9,4.9,2.4,5.7,3.3,6z M14.4,19.1H5.6c-0.8,0-1.4-0.7-1.4-1.6V6h11.5v11.5
+                                 C15.8,18.4,15.1,19.1,14.4,19.1z M7,1.9c0-0.2,0.1-0.5,0.3-0.7C7.5,1,7.7,0.9,7.9,0.9H12c0.2,0,0.5,0.1,0.6,0.3
+                                 c0.2,0.2,0.3,0.4,0.3,0.7v0.6H7V1.9z M3.7,3.4h12.5c0.5,0,0.8,0.4,0.8,0.8s-0.4,0.8-0.8,0.8H3.7c-0.5,0-0.8-0.4-0.8-0.8
+                                 S3.3,3.4,3.7,3.4z"/>
+                              <path class="st0"
+                                 d="M10,7.2c-0.3,0-0.5,0.2-0.5,0.5v8.9c0,0.3,0.2,0.5,0.5,0.5c0.3,0,0.5-0.2,0.5-0.5V7.7C10.5,7.5,10.2,7.2,10,7.2z"/>
+                           </svg>
+                           <svg class="copy-form-btn copy-form" onclick="copyFormKarkasWall(this)" 
+                              aria-label="Кнопка копирования формы" 
+                              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0"
+                              viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve" width="20">
+                              <path d="M74.7,512h256c29.4,0,53.3-23.9,53.3-53.3v-320c0-29.4-23.9-53.3-53.3-53.3h-256c-29.4,0-53.3,23.9-53.3,53.3v320
+                                 C21.3,488.1,45.3,512,74.7,512z M330.7,106.7c17.6,0,32,14.4,32,32v320c0,17.6-14.4,32-32,32h-256c-17.6,0-32-14.4-32-32v-320
+                                 c0-17.6,14.4-32,32-32H330.7z"/>
+                              <path d="M416,448h21.3c29.4,0,53.3-23.9,53.3-53.3V53.3c0-29.4-23.9-53.3-53.3-53.3h-256C151.9,0,128,23.9,128,53.3
+                                 c0,5.9,4.8,10.7,10.7,10.7s10.7-4.8,10.7-10.7c0-17.6,14.4-32,32-32h256c17.6,0,32,14.4,32,32v341.3c0,17.6-14.4,32-32,32H416
+                                 c-5.9,0-10.7,4.8-10.7,10.7S410.1,448,416,448z"/>
+                              <path d="M117.3,362.7H288c5.9,0,10.7-4.8,10.7-10.7c0-5.9-4.8-10.7-10.7-10.7H117.3c-5.9,0-10.7,4.8-10.7,10.7
+                                 C106.7,357.9,111.4,362.7,117.3,362.7z"/>
+                              <path d="M117.3,448H288c5.9,0,10.7-4.8,10.7-10.7s-4.8-10.7-10.7-10.7H117.3c-5.9,0-10.7,4.8-10.7,10.7S111.4,448,117.3,448z"/>
+                              <path d="M117.3,277.3H288c5.9,0,10.7-4.8,10.7-10.7S293.9,256,288,256H117.3c-5.9,0-10.7,4.8-10.7,10.7S111.4,277.3,117.3,277.3z"
+                                 />
+                              <path d="M117.3,192H288c5.9,0,10.7-4.8,10.7-10.7s-4.8-10.7-10.7-10.7H117.3c-5.9,0-10.7,4.8-10.7,10.7S111.4,192,117.3,192z"/>
+                           </svg>
+                           <span class="podskazka">Копировать</span>
+                           <div class="input_label__groups_item-wrp">
+                              <div class="input_label__groups-wrp">
+                                 <div class="input_label-wrp">
+                                    <label class="input_label" aria-label="Название поля ввода">Длина, м</label>
+                                    <input class="filter_data karkas_wall__length input-style" type="number"
+                                       name="data[Стены][0][Длина]" step="0.0001" min="0"
+                                       oninput="validity.valid||(value='');"
+                                       onkeyup="funcStenaKarkasWall(); perimeterKarkasWall(); sumPerimetersKarkasWall(); sumAreasKarkasWall();">
+                                 </div>
+                                 <div class="input_label-wrp">
+                                    <label class="input_label" aria-label="Название поля ввода">
+                                    Высота, м </label>
+                                    <input class="filter_data karkas_wall__height input-style" type="number"
+                                       name="data[Стены][0][Высота]" step="0.0001" min="0"
+                                       oninput="validity.valid||(value='');"
+                                       onkeyup="funcStenaKarkasWall(); perimeterKarkasWall(); sumAreasKarkasWall();">
+                                 </div>
+                              </div>
+                              <div class="hidden">
+                                 <label class="input_label">Периметр стены, м </label>
+                                 <input class="karkas_wall__perimeter input-style" disabled type="number"
+                                    name="karkas_wall__perimeter"
+                                    step="0.0001" min="0">
+                              </div>
+                              <div class="input_label-wrp">
+                                 <label class="input_label">Площадь, м&sup2;</label>
+                                 <input class="karkas_wall__result input-style" type="text"
+                                    name="karkas_wall__result[]" disabled>
+                              </div>
+                           </div>
+                        </form>
+                     </div>
+
+</div>
+<button class="add-form-btn add-form" id="add" type="button"
+aria-label="Кнопка добавления новой формы подсчета стен">
+<svg class="add-icon" aria-hidden="true" focusable="false" width="20" height="20" viewBox="0 0 20 20">
+   <path class="st0" d="M10,0C4.48,0,0,4.48,0,10s4.48,10,10,10s10-4.48,10-10S15.52,0,10,0z M14.38,10.83h-3.54v3.54
+      c0,0.46-0.38,0.83-0.83,0.83s-0.83-0.38-0.83-0.83v-3.54H5.62c-0.46,0-0.83-0.38-0.83-0.83s0.38-0.83,0.83-0.83h3.54V5.62
+      c0-0.46,0.38-0.83,0.83-0.83s0.83,0.38,0.83,0.83v3.54h3.54c0.46,0,0.83,0.38,0.83,0.83S14.83,10.83,14.38,10.83z"/>
+</svg>
+<span class="txt-btn">добавить новую стену</span>
+</button>
+               </div>
+                              <!-- Вывод общих значений -->
+                              <div class="all-results-wrp hidden1">				
+                                 <label class="input_label" aria-label="Название поля вывода">Общий периметр стен, м </label>
+                                 <input class="filter_data karkas_wall__perimeter-all input-style" disabled id="karkas_wall__perimeter-all-id" type="number"
+                                    name="data[Периметр стен]"
+                                    step="0.0001" min="0"
+                                    aria-labelledby="karkas_wall__form-id karkas_wall__perimeter-all-id">
+                                 <label class="input_label" aria-label="Название поля вывода">Общая площадь стен, м² </label>
+                                 <input class="filter_data karkas_wall__area-all2 input-style" id="karkas_wall__area-all2-id" disabled type="number"
+                                    name="data[Площадь стен]"
+                                    step="0.0001" min="0"
+                                    aria-labelledby="karkas_wall__form-id karkas_wall__area-all2-id">
+                                 <label class="input_label" aria-label="Название поля вывода">
+                                 Общая ширина оконных проемов, м </label>
+                                 <input class="filter_data window_sum-width-all input-style" disabled id="window_sum-width-all-id" type="number"
+                                    name="data[Ширина оконных проёмов]"
+                                    step="0.0001" min="0"
+                                    aria-labelledby="windows-form-id window_sum-width-all-id">
+                                 <label class="input_label" aria-label="Название поля вывода">
+                                 Общая площадь оконных проемов, м² </label>
+                                 <input class="filter_data window_area-all2 input-style" id="window_area-all2-id" disabled type="number"
+                                    name="data[Площадь оконных проёмов]"
+                                    step="0.0001" min="0" aria-labelledby="windows-form-id window_area-all2-id">
+                                 <label class="input_label" aria-label="Название поля вывода">
+                                 Общая ширина дверных проемов, м </label>
+                                 <input class="door_sum-width-all input-style" disabled id="door_sum-width-all-id" type="number"
+                                    name="door_sum-width-all[]"
+                                    step="0.0001" min="0"
+                                    aria-labelledby="doors-form-id door_sum-width-all-id">
+                                 <label class="input_label" aria-label="Название поля вывода">
+                                 Общая площадь дверных проемов, м² </label>
+                                 <input class="filter_data door_area-all2 input-style" id="door_area-all2-id" disabled type="number"
+                                    name="data[Площадь дверных проёмов]"
+                                    step="0.0001" min="0" aria-labelledby="doors-form-id door_area-all2-id">
+                              </div>
+            </div>
+
+
          </section>
       </div>
    </body>
