--- a/calc/teploizoliacia_form.html
+++ b/calc/teploizoliacia_form.html
@@ -1097,7 +1097,7 @@
                   </div>
                </div>
                <!-- Вывод общих значений -->
-               <div class="all-results-wrp hidden">				
+               <div class="all-results-wrp hidden">
                   <label class="input_label">Общий периметр каркасных стен, м </label>
                   <input class="filter_data karkas_wall__perimeter-all input-style" disabled id="karkas_wall__perimeter-all-id" type="number"
                      name="data[Периметр стен]"
@@ -1122,8 +1122,7 @@
                   <input class="filter_data karkas_door__area-all2 input-style" id="karkas_door__area-all2-id" disabled type="number"
                      name="data[Площадь дверей]"
                      step="0.0001" min="0">
-                     
-                     <!-- Вывод общих значений слоистых стен -->
+                  <!-- Вывод общих значений слоистых стен -->
                   <label class="input_label">Общий периметр слоистых стен, м </label>
                   <input class="filter_data stone_wall__perimeter-all input-style" disabled id="stone_wall__perimeter-all-id" type="number"
                      name="data[Периметр стен]"
@@ -1148,32 +1147,31 @@
                   <input class="filter_data stone_door__area-all2 input-style" id="stone_door__area-all2-id" disabled type="number"
                      name="data[Площадь дверей]"
                      step="0.0001" min="0"> 
-                     
-                        <!-- Вывод общих значений перегородок -->
-                        <label class="input_label">Общий периметр перегородок, м </label>
-                        <input class="filter_data peregor_wall__perimeter-all input-style" disabled id="peregor_wall__perimeter-all-id" type="number"
-                           name="data[Периметр перегородок]"
-                           step="0.0001" min="0">
-                        <label class="input_label">Общая площадь перегородок, м² </label>
-                        <input class="filter_data peregor_wall__area-all2 input-style" id="peregor_wall__area-all2-id" disabled type="number"
-                           name="data[Площадь перегородок]"
-                           step="0.0001" min="0">
-                        <label class="input_label">Общая ширина окон в перегородках, м </label>
-                        <input class="filter_data peregor_window__perimeter-all input-style" disabled id="peregor_window__perimeter-all-id" type="number"
-                           name="data[Ширина окон]"
-                           step="0.0001" min="0">
-                        <label class="input_label">Общая площадь окон в перегородках, м² </label>
-                        <input class="filter_data peregor_window__area-all2 input-style" id="peregor_window__area-all2-id" disabled type="number"
-                           name="data[Площадь окон]"
-                           step="0.0001" min="0">
-                        <label class="input_label">Общая ширина дверей в перегородках, м </label>
-                        <input class="filter_data peregor_door__perimeter-all input-style" disabled id="peregor_door__perimeter-all-id" type="number"
-                           name="data[Ширина дверей]"
-                           step="0.0001" min="0">
-                        <label class="input_label">Общая площадь дверей в перегородках, м² </label>
-                        <input class="filter_data peregor_door__area-all2 input-style" id="peregor_door__area-all2-id" disabled type="number"
-                           name="data[Площадь дверей]"
-                           step="0.0001" min="0">   
+                  <!-- Вывод общих значений перегородок -->
+                  <label class="input_label">Общий периметр перегородок, м </label>
+                  <input class="filter_data peregor_wall__perimeter-all input-style" disabled id="peregor_wall__perimeter-all-id" type="number"
+                     name="data[Периметр перегородок]"
+                     step="0.0001" min="0">
+                  <label class="input_label">Общая площадь перегородок, м² </label>
+                  <input class="filter_data peregor_wall__area-all2 input-style" id="peregor_wall__area-all2-id" disabled type="number"
+                     name="data[Площадь перегородок]"
+                     step="0.0001" min="0">
+                  <label class="input_label">Общая ширина окон в перегородках, м </label>
+                  <input class="filter_data peregor_window__perimeter-all input-style" disabled id="peregor_window__perimeter-all-id" type="number"
+                     name="data[Ширина окон]"
+                     step="0.0001" min="0">
+                  <label class="input_label">Общая площадь окон в перегородках, м² </label>
+                  <input class="filter_data peregor_window__area-all2 input-style" id="peregor_window__area-all2-id" disabled type="number"
+                     name="data[Площадь окон]"
+                     step="0.0001" min="0">
+                  <label class="input_label">Общая ширина дверей в перегородках, м </label>
+                  <input class="filter_data peregor_door__perimeter-all input-style" disabled id="peregor_door__perimeter-all-id" type="number"
+                     name="data[Ширина дверей]"
+                     step="0.0001" min="0">
+                  <label class="input_label">Общая площадь дверей в перегородках, м² </label>
+                  <input class="filter_data peregor_door__area-all2 input-style" id="peregor_door__area-all2-id" disabled type="number"
+                     name="data[Площадь дверей]"
+                     step="0.0001" min="0">   
                </div>
                <div class="select-wrp">
                   <label class="input_label">Выберите теплоизоляционный материал </label>
@@ -1185,15 +1183,13 @@
                   </select>
                </div>
             </div>
-
          </section>
-         <section class="peregorodkа">
-            <h2 class="peregor_title__h2">Расчёт теплоизоляционных материалов для перегородок</h2>
-            <!-- Начало формы для перегородок -->
-
-
-
-
+         <section class="perekritie">
+            <h2 class="perekrit_title__h2">Расчёт теплоизоляционных материалов для перекрытий</h2>
+            <!-- Начало формы для перекрытий -->
+            <h3 class="perekrit__h2">Выберите тип перекрытия:</h3>
+            <div class="perekrit__type">
+            </div>
          </section>
       </div>
    </body>
