Картинки оптимизированы, select добавлен в каждую стену

--- a/calc/teploizoliacia_form.html
+++ b/calc/teploizoliacia_form.html
@@ -568,6 +568,15 @@
                            <span class="txt-btn">добавить дверь</span>
                         </button>
                      </div>
+                     <div class="select-wrp">
+                        <label class="input_label">Выберите теплоизоляционный материал </label>
+                        <select class="filter_data select-selected input-style"
+                           name="data[Материал для стен][0][Выберите материал]">
+                           <option class="options-el" value="Минеральная вата">минеральная вата (стекловолокно)</option>
+                           <option class="options-el" value="Каменная вата">каменная вата</option>
+                           <option class="options-el" value="Пенополистирол">экструдированный пенополистирол</option>
+                        </select>
+                     </div> 
                   </div>
                </div>
                <div class="stone_wall">
@@ -831,10 +840,19 @@
                            <span class="txt-btn">добавить дверь</span>
                         </button>
                      </div>
+                     <div class="select-wrp">
+                        <label class="input_label">Выберите теплоизоляционный материал </label>
+                        <select class="filter_data select-selected input-style"
+                           name="data[Материал для стен][0][Выберите материал]">
+                           <option class="options-el" value="Минеральная вата">минеральная вата (стекловолокно)</option>
+                           <option class="options-el" value="Каменная вата">каменная вата</option>
+                           <option class="options-el" value="Пенополистирол">экструдированный пенополистирол</option>
+                        </select>
+                     </div>
                   </div>
                </div>
                <div class="peregor_wall">
-                  <div class="peregor_wall__checkbox bg_fon_roof">
+                  <div class="peregor_wall__checkbox bg_fon_roof2">
                      <div class="peregor_wall__wrp">
                         <img class="img__peregor_wall" src="../img/calc/teploizoliacia/peregorodka_stena.svg" alt="перегородка" height="150" id="img__peregor_wall-id">
                      </div>
@@ -1094,6 +1112,15 @@
                            <span class="txt-btn">добавить дверь</span>
                         </button>
                      </div>
+                     <div class="select-wrp">
+                        <label class="input_label">Выберите теплоизоляционный материал </label>
+                        <select class="filter_data select-selected input-style"
+                           name="data[Материал для стен][0][Выберите материал]">
+                           <option class="options-el" value="Минеральная вата">минеральная вата (стекловолокно)</option>
+                           <option class="options-el" value="Каменная вата">каменная вата</option>
+                           <option class="options-el" value="Пенополистирол">экструдированный пенополистирол</option>
+                        </select>
+                     </div>
                   </div>
                </div>
                <!-- Вывод общих значений -->
@@ -1172,15 +1199,6 @@
                   <input class="filter_data peregor_door__area-all2 input-style" id="peregor_door__area-all2-id" disabled type="number"
                      name="data[Площадь дверей]"
                      step="0.0001" min="0">   
-               </div>
-               <div class="select-wrp">
-                  <label class="input_label">Выберите теплоизоляционный материал </label>
-                  <select class="filter_data select-selected input-style"
-                     name="data[Материал для стен][0][Выберите материал]">
-                     <option class="options-el" value="Минеральная вата">минеральная вата (стекловолокно)</option>
-                     <option class="options-el" value="Каменная вата">каменная вата</option>
-                     <option class="options-el" value="Пенополистирол">экструдированный пенополистирол</option>
-                  </select>
                </div>
             </div>
          </section>
